# xiaomicli

./: .gitignore  CONFIG_GUIDE.md  Cargo.toml  config.json
.devcontainer/: devcontainer.json
.github/workflows/: blank.yml
cli/: Cargo.toml
cli/src/: main.rs  ws_server.rs
miai/: Cargo.toml
miai/examples/: hello.rs  save_and_load.rs
miai/src/: error.rs  lib.rs  login.rs  util.rs  watcher.rs  xiaoai.rs
